--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 		</dependency>
+		<dependency>
+    			<groupId>joda-time</groupId>
+   			 <artifactId>joda-time</artifactId>
+    			<version>2.10.14</version>
+		</dependency>
 	</dependencies>
 
 	<build>
